# Log-Ingestor-And-Dashboard

./: README.md
LogConsumer/: .gitignore  kakfka-setup.txt  pom.xml
LogConsumer/src/main/java/com/example/LogConsumer/: LogConsumerApplication.java
LogConsumer/src/main/java/com/example/LogConsumer/configuration/: KafkaConsumerConfig.java
LogConsumer/src/main/java/com/example/LogConsumer/controller/: LogController.java
LogConsumer/src/main/java/com/example/LogConsumer/model/: LogEvent.java  LogModel.java  SearchRequest.java
LogConsumer/src/main/java/com/example/LogConsumer/repository/: LogRepository.java
LogConsumer/src/main/java/com/example/LogConsumer/service/: LogConsumer.java
LogConsumer/src/main/resources/: application.properties
LogConsumer/src/test/java/com/example/LogConsumer/: LogConsumerApplicationTests.java
LogDashboard/: .env  pyproject.toml
LogDashboard/src/: app.py  sample_logs.json
LogDashboard/src/apis/: log_api.py
LogDashboard/src/db/: databaseinterface.py  mongointerface.py
LogDashboard/src/logdashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
LogDashboard/src/utils/: env.py
LogGeneratorApplication/: pom.xml
LogGeneratorApplication/src/main/java/com/saurav/LogGeneratorApplication/: LogGeneratorApplication.java
LogGeneratorApplication/src/main/java/com/saurav/LogGeneratorApplication/models/: LogEvent.java
LogGeneratorApplication/src/main/resources/: application.properties
LogGeneratorApplication/src/test/java/com/saurav/LogGeneratorApplication/: LogGeneratorApplicationTests.java
(+2 files in other folders)
